Regression: On closed lists, page up/down works like arrow up/down
Categories
(Core :: Layout: Form Controls, defect)
Tracking
()
People
(Reporter: foss, Assigned: Jamie)
References
Details
(Keywords: access, regression)
Attachments
(1 file)
47 bytes,
text/x-phabricator-request
|
lizzard
:
approval-mozilla-beta+
|
Details | Review |
Reporter | ||
Comment 1•6 years ago
|
||
Comment 2•6 years ago
|
||
Comment 3•6 years ago
|
||
Comment 4•6 years ago
|
||
Comment 5•6 years ago
|
||
Reporter | ||
Comment 6•6 years ago
|
||
Comment 7•6 years ago
|
||
Assignee | ||
Comment 8•6 years ago
|
||
Assignee | ||
Comment 9•6 years ago
|
||
Reporter | ||
Comment 10•6 years ago
|
||
Updated•6 years ago
|
Updated•6 years ago
|
Comment 11•6 years ago
|
||
Comment 12•6 years ago
|
||
Too late for 66 but we can still take a patch for 67.
Comment 13•6 years ago
|
||
Bulk change for all regression bugs with status-firefox67 as 'fix-optional' to be marked 'affected' for status-firefox68.
Updated•6 years ago
|
Comment 14•5 years ago
|
||
Asa, this bug seems to have fallen into the cracks, can it be prioritized please? Thanks
Comment 15•5 years ago
|
||
This does seem like something that would be good to unregress for keyboard users ASAP.
A year ago, in comment #8, Jamie asked for dbaron's thoughts on two possible solutions, clamping mNumDisplayRows to some reasonable constant, or tweak in the handlers for page up/page down (in nsListControlFrame::KeyDown). IMO, that's where we need to pick this back up.
Assignee | ||
Comment 16•5 years ago
|
||
The number of rows for the select dropdown can't be calculated in the content process because the dropdown has to be rendered in the parent process.
Therefore, we previously set the number of rows to 1 in this case.
That meant that the page up and page down keys only moved one item at a time for a collapsed select control, making them effectively useless.
Instead, set the number of rows to the maximum in this case.
Comment 17•5 years ago
|
||
Comment 18•5 years ago
|
||
bugherder |
Updated•5 years ago
|
Comment 19•5 years ago
|
||
Since the status are different for nightly and release, what's the status for beta?
For more information, please visit auto_nag documentation.
Updated•5 years ago
|
Comment 20•5 years ago
|
||
Hi,
Many thanks for this great job! The bug is fixed.
@Joanmarie: now the thing is that when I switch to focus mode, pgdn just scrolls one line. It scrolls 20 lines only if I pres alt-down arrow first. Is it a Firefox issue or can Orca help?
regards
Comment 21•5 years ago
|
||
oops I have just checked again and now it works perfectly! Great and sorry for the noise. Bug fixed, great, congrats and thanks!
Comment 22•5 years ago
|
||
Is a non-regressino test planned to avoid this bug to come back?
Regards
Comment 23•5 years ago
|
||
Seems like https://hg.mozilla.org/mozilla-central/rev/f3fff7c1f2ba includes a test.
Assignee | ||
Comment 24•5 years ago
|
||
Yes, the test I landed with the patch should prevent this from regressing.
Comment 25•5 years ago
|
||
Is this something we should consider uplifting to Beta or can it ride Fx71 to release?
Assignee | ||
Comment 26•5 years ago
|
||
Comment on attachment 9091347 [details]
Bug 1488828: For collapsed select controls in the content process, set the number of rows to the maximum instead of 1.
Beta/Release Uplift Approval Request
- User impact if declined: Inefficient keyboard functionality in collapsed HTML select controls (regressed in Firefox 57). Several users were actively requesting a fix.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Very straightforward patch covered by automated tests.
- String changes made/needed: None.
Assignee | ||
Updated•5 years ago
|
Comment 27•5 years ago
|
||
Comment on attachment 9091347 [details]
Bug 1488828: For collapsed select controls in the content process, set the number of rows to the maximum instead of 1.
Better keyboard control for collapsed menu selection, let's uplift for beta 9.
Comment 28•5 years ago
|
||
bugherder uplift |
Updated•5 years ago
|
Updated•5 years ago
|
Comment 29•5 years ago
|
||
Hello!
Reproduced the issue with Firefox 64.0a1 (20180905223809) on Windows 10x64.
The issue is verified fixed with Firefox 71.0a1 (20190923215658) and Firefox 70.0b9 (20190923154733) on Windows 10x64, Ubuntu 18.04 and macOS 10.14.
Description
•