Bug 1488828: For collapsed select controls in the content process, set the number of rows to the maximum instead of 1. r=dholbert a=lizzard

The number of rows for the select dropdown can't be calculated in the content process because the dropdown has to be rendered in the parent process.
Therefore, we previously set the number of rows to 1 in this case.
That meant that the page up and page down keys only moved one item at a time for a collapsed select control, making them effectively useless.
Instead, set the number of rows to the maximum in this case.

Differential Revision: https://phabricator.services.mozilla.com/D45154